use macOS Intel image for CI with PySide2 instead of Apple Silicon

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,8 @@ jobs:
           - os: macos-latest
             pyversion: '3.10'
             qtlib: pyqt5
-          - os: macos-latest
+          # --- PySide2 requires macOS with Intel CPU
+          - os: macos-12  # ... has Intel instead of Apple Silicon
             pyversion: '3.9'
             qtlib: pyside2
           # --- Older Python versions and qt libs
