--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
           # Main test builds, 3 OS's times 4 Qt toolkits
           - os: windows-latest
             pyversion: '3.12'
-            qtlib: pyside6!=6.7.0
+            qtlib: pyside6
           - os: windows-latest
             pyversion: '3.11'
             qtlib: pyqt6
@@ -52,7 +52,7 @@ jobs:
           # ---
           - os: ubuntu-latest
             pyversion: '3.12'
-            qtlib: pyside6!=6.7.0
+            qtlib: pyside6
           - os: ubuntu-latest
             pyversion: '3.11'
             qtlib: pyqt6
@@ -85,7 +85,7 @@ jobs:
             qtlib: pyside6
           - os: windows-latest
             pyversion: '3.9'
-            qtlib: pyside6!=6.7.0
+            qtlib: pyside6
     steps:
     - uses: actions/checkout@v3
     - name: Setup os
