--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
           # ---
           - os: macos-latest
             pyversion: '3.12'
-            qtlib: 'pyside6==6.6.0'
+            qtlib: 'pyside6'
           - os: macos-latest
             pyversion: '3.11'
             qtlib: pyqt6
