--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,9 @@ jobs:
       run: |
           python -m pip install --upgrade pip
           pip install -U black flake8 flake8-black
-    - name: Flake8
-      run: |
-          flake8 .
+    #- name: Flake8
+    #  run: |
+    #      flake8 .
 
   test-builds:
     name: Test ${{ matrix.os }} py${{ matrix.pyversion }} ${{ matrix.qtlib }}
