--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,13 @@ jobs:
     - name: Install dev dependencies
       run: |
           python -m pip install --upgrade pip
-          pip install -U black flake8 flake8-black
-    #- name: Flake8
-    #  run: |
-    #      flake8 .
+          pip install -U ruff
+    # - name: Ruff lint
+    #   run: |
+    #       ruff check --output-format=github .
+    # - name: Ruff format
+    #   run: |
+    #       ruff format --check .
 
   test-builds:
     name: Test ${{ matrix.os }} py${{ matrix.pyversion }} ${{ matrix.qtlib }}
