--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@
 
 [project]
 dynamic = ["version"]
-name = "Pyzo"
+name = "pyzo"
 description = "the Python IDE for scientific computing"
 readme = "README.md"
 license = { file = "LICENSE.md" }
@@ -35,8 +35,8 @@ Homepage = "https://pyzo.org"
 Documentation = "https://pyzo.org"
 Repository = "https://github.com/pyzo/pyzo"
 
-# [project.gui-scripts]
-# pyzo = "pyzo:start"
+[project.gui-scripts]
+pyzo = "pyzo:start"
 
 
 # ===== Building
