--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,12 +26,12 @@ jobs:
       run: |
           python -m pip install --upgrade pip
           pip install -U ruff
-    # - name: Ruff lint
-    #   run: |
-    #       ruff check --output-format=github .
-    # - name: Ruff format
-    #   run: |
-    #       ruff format --check .
+    - name: Ruff lint
+      run: |
+          ruff check --output-format=github .
+    - name: Ruff format
+      run: |
+          ruff format --check .
 
   test-builds:
     name: Test ${{ matrix.os }} py${{ matrix.pyversion }} ${{ matrix.qtlib }}
