--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
         include:
           # Main test builds, 3 OS's times 4 Qt toolkits
           - os: windows-latest
+            pyversion: '3.13'
+            qtlib: pyside6
+          - os: windows-latest
             pyversion: '3.12'
             qtlib: pyside6
           - os: windows-latest
@@ -55,6 +58,9 @@ jobs:
             qtlib: pyside2
           # ---
           - os: ubuntu-latest
+            pyversion: '3.13'
+            qtlib: pyside6
+          - os: ubuntu-latest
             pyversion: '3.12'
             qtlib: pyside6
           - os: ubuntu-latest
@@ -67,6 +73,9 @@ jobs:
             pyversion: '3.9'
             qtlib: pyside2
           # ---
+          - os: macos-latest
+            pyversion: '3.13'
+            qtlib: pyside6
           - os: macos-latest
             pyversion: '3.12'
             qtlib: pyside6
