--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -6,5 +6,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: astral-sh/ruff-action@v3
-	- args "ruff format ."
-	- args "ruff check --fix ."
+	with
+	- args: ruff format .
+	- args: ruff check --fix .
