--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: astral-sh/ruff-action@v3
-        with:
-    	  args: "format"
+      - run: ruff check --fix
+      - run: ruff format
