--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -128,7 +128,8 @@ jobs:
         echo "Attach staple"
         xcrun stapler staple "freeze/dist/pyzo.app"
     - name: Package
-      run: python freeze/pyzo_package.py
+      # need sudo to avoid hdiutil: create failed - Resource busy, see https://github.com/actions/runner-images/issues/7522
+      run: sudo python freeze/pyzo_package.py
     - name: Test frozen
       shell: bash
       run: |
@@ -211,7 +212,7 @@ jobs:
   # running Pyzo from source anyway.
   linux_amd64:
     name: Build Linux amd64
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     env:
       PYZO_QT_API: PyQt5
     steps:
